# http-server-ORM

./: .gitignore  CMakeLists.txt  README.md  client.c  index.html  server  server.c
include/: client.h  global.h  helper.h  server.h  structs.h  util.h
portable/: CMakeLists.txt  client.c  server.c
server_data/: products.csv  sum_script.js  text_data.txt
src/: client.c  global.c  helper.c  main.c  server.c
